--- a/src/CompetitiveRankingWeb/Views/Game/Index.cshtml
+++ b/src/CompetitiveRankingWeb/Views/Game/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Tuple<int, List<CompetitiveRankingWeb.Models.Game>>>
 
 @{
-    ViewBag.Title = "Games";
+    ViewBag.Title = "Charts";
 }
 
 <h2>Games</h2>
